puppet/parser/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Notifications/content/Hubs/NotificationHub.cs.pp
using System;
using $rootnamespace$.Models;
using SignalR.Hubs;

namespace $rootnamespace$.Hubs
{
    [HubName("notifications")]
    public partial class NotificationHub : Hub
    {
        public void Notify(UserNotification notification)
        {
            Clients.notify(notification);
        }
    }
}